--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,34 @@ table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 thead, tfoot, tr:nth-child(even) { background: #eee; }
 
+
+
+section.resume-section {
+  border-bottom: 1px solid #9DADDC;
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
+  max-width: 1080px;
+}
+
+section.resume-section .resume-item .resume-date {
+  min-width: none;
+}
+
+@media (min-width: 768px) {
+  section.resume-section {
+    min-height: 100vh;
+    margin-left: 3rem !important;
+    margin-right: 3rem !important;
+  }
+  section.resume-section .resume-item .resume-date {
+    min-width: 18rem;
+  }
+}
+
+@media (min-width: 992px) {
+  section.resume-section {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+  }
+}
+
