--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ thead, tfoot, tr:nth-child(even) { background: #eee; }
 
 h6 {
   font-size: 10px;
-  line-height: 11px;
+/*   line-height: 11px; */
   color: #999;
   font-weight: 400;
 }
