--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,51 @@ span.d-block {
   margin-top: 20px; /* Adjust space above the line */
   margin-bottom: 20px; /* Adjust space below the line */
 }
+
+
+/* Responsive adjustments */
+@media (max-width: 600px) {
+  body {
+    padding: 0.5em;
+  }
+  
+  .menu li {
+    display: block; /* Stack menu items vertically on smaller screens */
+    margin-bottom: 5px; /* Add some space between menu items */
+  }
+  
+  .title, .subheading {
+    font-size: 0.9em; /* Make titles and subheadings smaller on small screens */
+  }
+  
+  pre, code {
+    padding: 0.5em; /* Reduce padding for code blocks */
+  }
+  
+  blockquote {
+    padding: 2px 0.5em; /* Adjust blockquote padding */
+  }
+  
+  .pubthumb {
+    width: 40px; /* Reduce size of publication thumbnails */
+    height: 70px;
+  }
+  
+  span.d-block {
+    padding: 0 10px; /* Add padding to elements within span.d-block for better spacing */
+  }
+  
+  /* Adjust table layout for small screens */
+  table, th, td {
+    display: block;
+  }
+  
+  th, td {
+    text-align: right; /* Align text to the right or choose a suitable alignment */
+    padding: 10px 0; /* Increase padding for readability */
+  }
+  
+  table thead {
+    display: none; /* Hide the table header on small screens */
+  }
+}
