--- a/css/style.css
+++ b/css/style.css
@@ -213,5 +213,24 @@ span.d-block {
 
 
 .references-section {
-  margin-top: 2em; /* Adjust space above the references
+  margin-top: 2em;
+  text-align: center;
+}
+
+.reference-list {
+  display: flex;
+  justify-content: center; /* Center the references horizontally */
+  flex-wrap: wrap; /* Allows items to wrap to the next line on small screens */
+  gap: 1em; /* Add space between the reference items */
+}
+
+.reference {
+  flex-basis: 20%; /* Adjust the width of each reference item */
+  text-align: left;
+}
+
+@media (max-width: 768px) {
+  .reference {
+    flex-basis: 100%; /* Each reference item takes full width on small screens */
+  }
 }
