--- a/css/style.css
+++ b/css/style.css
@@ -163,49 +163,49 @@ span.d-block {
   }
 
 
-  
-
 }
+
 .social-icons-container {
   display: flex;
-  justify-content: flex-end; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
-  flex-direction: row; /* Align items horizontally */
-  flex-wrap: nowrap; /* Prevent wrapping */
-  margin: auto; /* Center the container on the page */
+  justify-content: center;  /* Adjust alignment as needed */
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: auto;
   margin-bottom: -20px;
 }
-@media (min-width: 768px) {
-  .social-icons-container {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: nowrap;
-  }
-}
-
 
 .icon-wrapper {
-  margin: 0 10px; /* Adjust the space between icons */
-  display: flex; /* Aligns the svg/img within the icon wrapper */
-  justify-content: center; /* Center horizontally in the icon wrapper */
-  align-items: center; /* Center vertically in the icon wrapper */
+  margin: 0 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .social-icon-link {
-  display: inline-flex; /* Allows the a tag to be a flex container */
-  margin: 0 10px; /* Adjust the space between icons */
-  justify-content: center; /* Center content horizontally */
-  align-items: center; /* Center content vertically */
+  display: inline-flex;
+  margin: 0 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 .social-icon-link img, .social-icon-link svg {
-  width: 28px; /* Adjust width as needed */
-  height: auto; /* Maintain the aspect ratio */
-  vertical-align: middle; /* Aligns the icons if they are different heights */
+  width: 28px;  /* Adjust size if necessary */
+  height: auto;
+  vertical-align: middle;
 }
 
+@media (max-width: 768px) {
+  .social-icons-container {
+    justify-content: center; /* Ensure center alignment on small screens */
+  }
+
+  .menu li, .div-block-9_2 {
+    display: flex; /* Ensuring that the menu items remain flex */
+    justify-content: center; /* Centering the menu items */
+    align-items: center;
+  }
+}
 /* This will target the reference list container */
 .references-section {
   text-align: center;
