--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ span.d-block {
 .social-icons-container {
   display: flex;
   justify-content: center; /* Center items horizontally */
-  align-items: center; /* Center items vertically */
+ /* align-items: center; /* Center items vertically */
   flex-direction: row; /* Align items horizontally */
   flex-wrap: nowrap; /* Prevent wrapping */
   margin: auto; /* Center the container on the page */
@@ -181,7 +181,7 @@ span.d-block {
   .social-icons-container {
     display: flex;
     justify-content: flex-end;
-    align-items: center;
+    /*align-items: center;*/
     flex-direction: row;
     flex-wrap: nowrap;
   }
@@ -198,13 +198,13 @@ span.d-block {
   display: inline-flex; /* Allows the a tag to be a flex container */
   margin: 0 10px; /* Adjust the space between icons */
   justify-content: center; /* Center content horizontally */
-  align-items: center; /* Center content vertically */
+  /*align-items: center; /* Center content vertically */
 }
 
 .social-icon-link img, .social-icon-link svg {
   width: 28px; /* Adjust width as needed */
   height: auto; /* Maintain the aspect ratio */
-  vertical-align: middle; /* Aligns the icons if they are different heights */
+  /*vertical-align: middle; /* Aligns the icons if they are different heights */
 }
 
 /* This will target the reference list container */
