--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ span.d-block {
 .social-icons-container {
   display: flex;
   justify-content: center; /* Center items horizontally */
- /* align-items: center; /* Center items vertically */
+  align-items: center; /* Center items vertically */
   flex-direction: row; /* Align items horizontally */
   flex-wrap: nowrap; /* Prevent wrapping */
   margin: auto; /* Center the container on the page */
