--- a/css/style.css
+++ b/css/style.css
@@ -179,11 +179,11 @@ span.d-block {
 
 @media (min-width: 768px) {
   .social-icons-container {
-    /*display: flex;
-    /*justify-content: flex-end;
-    /*align-items: center;*/
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     flex-direction: row;
-    /*flex-wrap: nowrap;*/
+    flex-wrap: nowrap;
   }
 }
 
@@ -191,20 +191,20 @@ span.d-block {
   margin: 0 10px; /* Adjust the space between icons */
   display: flex; /* Aligns the svg/img within the icon wrapper */
   justify-content: center; /* Center horizontally in the icon wrapper */
-  /*align-items: center; /* Center vertically in the icon wrapper */
+  align-items: center; /* Center vertically in the icon wrapper */
 }
 
 .social-icon-link {
   display: inline-flex; /* Allows the a tag to be a flex container */
   margin: 0 10px; /* Adjust the space between icons */
   justify-content: center; /* Center content horizontally */
-  /*align-items: center; /* Center content vertically */
+  align-items: center; /* Center content vertically */
 }
 
 .social-icon-link img, .social-icon-link svg {
   width: 28px; /* Adjust width as needed */
   height: auto; /* Maintain the aspect ratio */
-  /*vertical-align: middle; /* Aligns the icons if they are different heights */
+  vertical-align: middle; /* Aligns the icons if they are different heights */
 }
 
 /* This will target the reference list container */
