--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ span.d-block {
   height:2.4rem;
   width:2.4rem;
   background-color:transparent;
-  color:#000000 !important;
+  color:black !important;
   border-radius:100%;
   text-align:center;
   font-size:1.15rem;
