--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,12 @@ span.d-block {
   }
 }
 
+.social-icons {
+    display: flex;
+    justify-content: flex-end; /* Aligns the icons to the right */
+    padding-right: 2rem; /* Adds some spacing from the right edge */
+    margin-top: 20px;
+}
 
 .social-icons a {
   display:inline-block;
@@ -244,7 +250,7 @@ span.d-block {
   text-align:center;
   font-size:1.5rem;
   line-height:2.5rem;
-  margin-right:10rem
+  margin-right:1rem
 }
 .social-icons a:last-child {
   margin-right:0
