--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ span.d-block {
 
 
 .social-icons a {
-  float: left;
+  float: right;
   display:inline-block;
   height:2.4rem;
   width:2.4rem;
