--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ hr {
   color: #ddd;
 }
 
+.menu li a.special-tab {
+  background: #FF5733;
+  color: #FF5733; /* Change this to your desired color */
+  font-family: 'Arial', sans-serif; /* Replace with your desired font */
+  font-weight: bold; /* Optional: adjust for emphasis */
+}
+
 /* code */
 pre {
   border: 1px solid #ddd;
@@ -100,11 +107,7 @@ span.d-block {
   }
 }
 
-.menu li a.special-tab {
-  color: #FF5733; /* Change this to your desired color */
-  font-family: 'Arial', sans-serif; /* Replace with your desired font */
-  font-weight: bold; /* Optional: adjust for emphasis */
-}
+
 
 /* Adjust the profile image for mobile */
 /* .profile-img { */
