--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@ hr {
 
 .menu li a.special-tab {
   background: #eee;
-  color: #FF5733; /* Change this to your desired color */
-  font-family: 'Arial', sans-serif; /* Replace with your desired font */
+  color: #f58871; /* Change this to your desired color */
+/*   font-family: 'Arial', sans-serif; /* Replace with your desired font */ */
   font-weight: bold; /* Optional: adjust for emphasis */
 }
 
