--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ table {
   margin-left: 0; /* Aligns the table to the left */
 }
 table thead th { border-bottom: 1px solid #ddd; }
-th, td { padding: 5px; }
+th, td { padding: 5px; border: none; }
 thead, tfoot, tr:nth-child(even) { background: #eee; }
 
 
