--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ hr {
 
 .menu li a.special-tab {
   background: #eee;
-  color: #cf5d46; /* Change this to your desired color */
+  color: #eb4928; /* Change this to your desired color */
 /*   font-family: 'Arial', sans-serif; /* Replace with your desired font */ */
   font-weight: bold; /* Optional: adjust for emphasis */
 }
