--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   line-height: 1.5em;
 }
  a {
-    color: cornflowerblue; /* Change the color of all links */
+    color: dodgerblue; /* Change the color of all links */
   }
 
 /* header and footer areas */
