--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,8 @@ th {
 /* Publish icon */
 .pubthumb {
   float: left;
-  width: 75px;
+  max-width: 100%; /*width: 75px;*/
+  display: block;
   height: auto; /*110px; */
   margin-right: 10px;
 }
